--- a/M7.md
+++ b/M7.md
@@ -14,8 +14,9 @@ GE ... Geldeinheiten
 * S-förmig: Variable Kosten steigen zuerst unter-, dann überproportional an.      
 
 ### Grenzkostenfunktion K´(x)
-Die Grenzkosten K´(x) geben nährungsweise den Kostenzuwachs bei Steigerung der Produktion um eine Mengeneinheit an, dh.  
-$\ K´(x) \approx K(x+1) - K(x) $ <br>   
+Die Grenzkosten K´(x) geben nährungsweise den Kostenzuwachs bei Steigerung der Produktion um eine Mengeneinheit an, dh.   
+
+$\ K´(x) \approx K(x+1) - K(x) $
 
 ## 2. Stückkostenfunktion und Betriebsoptimum
 ### Stückkostenfunktion $\ \overline{K} (x)$
