--- a/M7.md
+++ b/M7.md
@@ -30,7 +30,7 @@ $\ \overline{K}´(x_{opt})=0 $
 ---   
 Aus   
 
-$\ \overline{K} (x_opt)~=~{{K(x_opt)} \over {x_opt}} $   
+$\ \overline{K} (xopt)~=~{{K(xopt)} \over {xopt}} $   
 
  und 
 
