--- a/M7.md
+++ b/M7.md
@@ -29,10 +29,9 @@ $\ \overline{K}´(x_{opt})=0 $
 
 ---   
 Aus   
+$\ \overline{K} (xopt) = {{ K(xopt)} \over {xopt}} $   
 
-$\ \overline{K} (xopt)~=~{{K(xopt)} \over {xopt}} $   
-
- und 
+ und   
 
 $\ \overline{K}´(x_{opt})~=~ {{ K´(x_{opt}) \cdot x_{opt}~-~K(x_{opt})} \over {x_{opt}^2}} ~=~0$
 
