--- a/M7.md
+++ b/M7.md
@@ -29,7 +29,7 @@ $\ \overline{K}´(x_{opt})=0 $
 
 ---   
 Aus   
-$\ \overline{K} (x_opt) = {{ K(xopt)} \over {xopt}} $   
+$\ \overline{K} (x_{opt}) = {{ K(xopt)} \over {xopt}} $   
 
  und   
 
