--- a/M7.md
+++ b/M7.md
@@ -33,7 +33,7 @@ $\ \overline{K} (x_{opt}) = {{ K(x_{opt})} \over {x_{opt}}} $
 
  und   
 
-$\ \overline{K} ´(x_{opt}) ~=~ {{ K´(x_{opt}) \cdot x_{opt} ~-~ K(x_{opt})} \over {x_{opt}^2}} ~=~ 0 $   
+$\ \overline{K} ´(x_{opt}) = {{ K´(x_{opt}) \cdot x_{opt} - K(x_{opt})} \over {x_{opt}^2}} = 0 $   
 
  folgt   
 
