--- a/info/zz_test/M7.md
+++ b/info/zz_test/M7.md
@@ -9,22 +9,22 @@ GE ... Geldeinheiten
 
 ### Kostenverlauf K(x)
 * linear: Mit zunehmenden Output steigen die variablen Kosten proportional an.   
-* progressiv: Variable Kosten steigen überproportional an.   
+* progressiv: Variable Kosten steigen &uuml;berproportional an.   
 * degressiv: Variable Kosten steigen unterproportional an.   
-* S-förmig: Variable Kosten steigen zuerst unter-, dann überproportional an.      
+* S-f&ouml;rmig: Variable Kosten steigen zuerst unter-, dann &uuml;berproportional an.      
 
 ### Grenzkostenfunktion K´(x)
-Die Grenzkosten K´(x) geben nährungsweise den Kostenzuwachs bei Steigerung der Produktion um eine Mengeneinheit an, dh.   
+Die Grenzkosten K´(x) geben n&auml;hrungsweise den Kostenzuwachs bei Steigerung der Produktion um eine Mengeneinheit an, dh.   
 
 $\ K´(x) \approx K(x+1) - K(x) $
 
-## 2. Stückkostenfunktion und Betriebsoptimum
-### Stückkostenfunktion $\ \overline{K} (x)$
-Die Stückkostenfunktion ergibt die Produktionskosten pro Stück:   
+## 2. St&uuml;ckkostenfunktion und Betriebsoptimum
+### St&uuml;ckkostenfunktion $\ \overline{K} (x)$
+Die St&uuml;ckkostenfunktion ergibt die Produktionskosten pro St&uuml;ck:   
 $\ \overline{K} (x) = {{ K(x)} \over {x}} $   
 
 ### Betriebsoptimum
-Das Betriebsoptimum ist die __Produktionsmenge__ x<sub>opt</sub>, bei der die Produktionskosten pro Stück $\ \overline{K}(x_{opt}) $ minimal ist, d.h. die Stückkostenfunktion ein Minimum hat:   
+Das Betriebsoptimum ist die __Produktionsmenge__ x<sub>opt</sub>, bei der die Produktionskosten pro St&uuml;ck $\ \overline{K}(x_{opt}) $ minimal ist, d.h. die St&uuml;ckkostenfunktion ein Minimum hat:   
 $\ \overline{K}´(x_{opt})=0 $   
 
 ---   
@@ -37,23 +37,23 @@ $\ \overline{K} ´(x_{opt}) = {{ K´(x_{opt}) \cdot x_{opt} ~ - ~ K(x_{opt})} \o
 $\ \overline{K}(x_{opt})~=~K´(x_{opt}) $
 
  d.h.   
-Beim Betriebsoptimum x<sub>opt</sub> sind die (minimalen) Stückkosten $\ \overline{K} $(x<sub>opt</sub>) gleich den Grenzkosten $\ K´ $(x<sub>opt</sub>).   
+Beim Betriebsoptimum x<sub>opt</sub> sind die (minimalen) St&uuml;ckkosten $\ \overline{K} $(x<sub>opt</sub>) gleich den Grenzkosten $\ K´ $(x<sub>opt</sub>).   
 
-Minimale Stückkosten = __Langfristige Preisuntergrenze__ $\ \overline{K}(x_{opt}) $
+Minimale St&uuml;ckkosten = __Langfristige Preisuntergrenze__ $\ \overline{K}(x_{opt}) $
 
-## 3. Gewinnmaximierung bei vollständiger Konkurrenz
-"Vollständige Konkurrenz": Der Preis eines Produkts ist fix (vom Markt bestimmt), der Anbieter kann nur die Menge beeinflussen, die er verkaufen will. ==>   
-Ziel: __Welche Menge x des Produkts__ soll erzeugt und angeboten werden, damit nach dem Verkauf zum vorgegebenen Marktpreis p ein möglichst großer Gewinn G erzielt wird?   
+## 3. Gewinnmaximierung bei vollst&auml;ndiger Konkurrenz
+"Vollst&auml;ndige Konkurrenz": Der Preis eines Produkts ist fix (vom Markt bestimmt), der Anbieter kann nur die Menge beeinflussen, die er verkaufen will. ==>   
+Ziel: __Welche Menge x des Produkts__ soll erzeugt und angeboten werden, damit nach dem Verkauf zum vorgegebenen Marktpreis p ein m&ouml;glichst gro&szlig;er Gewinn G erzielt wird?   
 
-* Erlös (Ertrag, Umsatz) = Verkaufspreis mal verkaufter Menge   
+* Erl&ouml;s (Ertrag, Umsatz) = Verkaufspreis mal verkaufter Menge   
   E(x) = p &sdot; x   
-* Gewinn = Erlös minus Kosten   
+* Gewinn = Erl&ouml;s minus Kosten   
   G(x) = E(x) - K(x)   
 * Mengen, bei denen der Gewinn gerade 0 ist: "Break-even-Punkte" (BEP)   
-  Das sind die Schnittpunkte der Kosten-Funktion K(x) mit der Erlös-Funktion E(x).   
+  Das sind die Schnittpunkte der Kosten-Funktion K(x) mit der Erl&ouml;s-Funktion E(x).   
 
-Gewinnmaximierung für die optimale Menge x = x<sub>max</sub>: G´(x) = 0 setzen   
-Beachte: Im Normalfall ist die Stückzahl beim Betriebsoptimum x<sub>opt</sub> und beim Gewinnmaximum x<sub>max</sub> nicht gleich.   
+Gewinnmaximierung f&uuml;r die optimale Menge x = x<sub>max</sub>: G´(x) = 0 setzen   
+Beachte: Im Normalfall ist die St&uuml;ckzahl beim Betriebsoptimum x<sub>opt</sub> und beim Gewinnmaximum x<sub>max</sub> nicht gleich.   
 
 ## 4. Gewinnmaximierung bei Vorliegen eines Monopols
 "Monopol": Der Produktpreis p kann vom Monopolisten beliebig festgelegt werden. Variabel ist die nachgefragte Menge x.   
@@ -61,25 +61,25 @@ Die __Nachfragefunktion__ x &rarr; p(x) stellt den Zusammenhang zwischen der nac
   ![](./o_Nachfragefunktion.png)   
   _Bild 1: Nachfragefunktion_   
 
-p(0) ... Höchstpreis   
-Xs ... Sättigungsmenge   
+p(0) ... H&ouml;chstpreis   
+Xs ... S&auml;ttigungsmenge   
 
-* Erlös (Ertrag, Umsatz) = Verkaufspreis mal verkaufter Menge   
+* Erl&ouml;s (Ertrag, Umsatz) = Verkaufspreis mal verkaufter Menge   
   E(x) = p &sdot; x   
-* Gewinn = Erlös minus Kosten   
+* Gewinn = Erl&ouml;s minus Kosten   
   G(x) = E(x) - K(x)   
 
 Cournot´scher Punkt C = (x<sub>c</sub> | p<sub>c</sub>): Maximaler Gewinn   
 x<sub>c</sub> ... Cournot´sche Menge   
 p<sub>c</sub> ... Cournot´scher Preis   
-Gewinnmaximum und Erlösmaximum sind ungleich!   
+Gewinnmaximum und Erl&ouml;smaximum sind ungleich!   
 
-## 5. Preiselastizität der Nachfrage
-Nachfragefunktion p(x): Preis (GE/ME) in Abhängigkeit von der Stückzahl x.   
-Änderung des Preies (Preisänderung): p<sub>1</sub> = p<sub>0</sub> + &Delta;p   
-Änderung der Nachfrage: x<sub>1</sub> = x<sub>0</sub> + &Delta;x   
+## 5. Preiselastizit&auml;t der Nachfrage
+Nachfragefunktion p(x): Preis (GE/ME) in Abh&auml;ngigkeit von der St&uuml;ckzahl x.   
+&Auml;nderung des Preies (Preis&auml;nderung): p<sub>1</sub> = p<sub>0</sub> + &Delta;p   
+&Auml;nderung der Nachfrage: x<sub>1</sub> = x<sub>0</sub> + &Delta;x   
 
-Die __mittlere Preiselastizität der Nachfrage &epsilon;__ bei Änderung des Preises von p<sub>0</sub> auf p<sub>1</sub> ist die relative Änderung der Nachfrage &Delta;x/x<sub>0</sub> bezogen auf die relative Änderung des Preises &Delta;p/p<sub>0</sub>.   
+Die __mittlere Preiselastizit&auml;t der Nachfrage &epsilon;__ bei &Auml;nderung des Preises von p<sub>0</sub> auf p<sub>1</sub> ist die relative &Auml;nderung der Nachfrage &Delta;x/x<sub>0</sub> bezogen auf die relative &Auml;nderung des Preises &Delta;p/p<sub>0</sub>.   
 
 $$\overline{\epsilon}(p_0, p_1) = { { ~ {\Delta x \over {x_0}} ~ } \over {\Delta p \over {p_0}}} $$
 
@@ -87,15 +87,15 @@ Ist die Nachfragefunktion p(x) differenzierbar, so ergibt sich mit lim &Delta;p 
 
 $$\epsilon (x) = {p(x) \over ~ {x ~ \cdot ~ p´(x)} ~ }$$
 
-Dieser Grenzwert heißt __Preiselastizität der Nachfrage &epsilon;__ zur Nachfragemenge x.   
+Dieser Grenzwert hei&szlig;t __Preiselastizit&auml;t der Nachfrage &epsilon;__ zur Nachfragemenge x.   
 
-Die Nachfrage heißt   
+Die Nachfrage hei&szlig;t   
 * __elastisch__, wenn |&epsilon;(x)| > 1,   
-  d.h. eine (relative) Preisänderung bewirkt eine größere (relative) Nachfrageänderung,   
+  d.h. eine (relative) Preis&auml;nderung bewirkt eine gr&ouml;&szlig;ere (relative) Nachfrage&auml;nderung,   
 * __proportional elastisch__, wenn |&epsilon;(x)| = 1,   
-  d.h., eine relative Preisänderung bewirkt die gleiche relative Nachfrageänderung,   
+  d.h., eine relative Preis&auml;nderung bewirkt die gleiche relative Nachfrage&auml;nderung,   
 * __unelastisch__, wenn |&epsilon;(x)| < 1 ist.   
-  D.h., eine (relative) Preisänderung bewirkt keine so große (relative) Nachfrageänderung.   
+  D.h., eine (relative) Preis&auml;nderung bewirkt keine so gro&szlig;e (relative) Nachfrage&auml;nderung.   
 
 
 
